[package]
name = "opentelemetry-stackdriver"
version = "0.5.0"
description = "A Rust opentelemetry exporter that uploads traces to Google Stackdriver trace."
documentation = "https://vivint-smarthome.github.io/opentelemetry-stackdriver/opentelemetry_stackdriver/"
repository = "https://github.com/vivint-smarthome/opentelemetry-stackdriver"
license = "MIT/Apache-2.0"
authors = ["jacobkiesel <jacob.kiesel@vivint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = { version = "0.2", default-features = false, features = ["transport", "prost"] }

[dev-dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
tokio = "0.2"
tracing = "0.1"
tracing-futures = "0.2.2"
tracing-opentelemetry = "0.3"
tracing-subscriber = "0.2"

[dependencies]
derivative = "1.0"
futures = "0.3"
hex = "0.4"
http = "0.2"
log = "0.4"
num_cpus = "1.12"
opentelemetry = "0.4"
prost = "0.6"
prost-types = "0.6"
tonic = { version = "0.2", features = ["tls", "tls-roots"] }
tokio = { version = "0.2", optional = true }
yup-oauth2 = "4.1"

[features]
default = []
tokio_adapter = ["tokio"]
